<resources>
    <string name="app_name">Android</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="pipe_value">|</string>

    <string name="weather_icon_highlight_content_description">Weather Icon</string>
    <string name="weather_icon_humidity">Humidity Icon</string>
    <string name="weather_icon_precipitation_icon">Precipitation Icon</string>
    <string name="weather_icon_pressure">Pressure Icon</string>
    <string name="weather_icon_wind_speed_icon">Wind Speed Icon</string>
    <string name="weather_icon_wind_direction_icon">Wind Direction Icon</string>
</resources>
