<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_margin="20dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/weather_icon_highlight"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/weather_icon_highlight_content_description"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:id="@+id/weather_icon"
                    android:scaleType="fitStart"
                    android:src="@drawable/icon_01d"
                    android:layout_gravity="center_vertical"
                    />

                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/city_country_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="28sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/temperature_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

                <TextView
                    android:id="@+id/pipe_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pipe_value"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

                <TextView
                    android:id="@+id/summary_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/weather_icon_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weather_humidity"
                    android:layout_weight="0.5"/>

                <ImageView
                    android:contentDescription="@string/weather_icon_precipitation_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weather_precipitation"
                    android:layout_weight="0.5"/>

                <ImageView
                    android:contentDescription="@string/weather_icon_pressure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weather_pressure"
                    android:layout_weight="0.5"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/precipitation_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/weather_icon_wind_speed_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weather_wind_speed"
                    android:layout_weight="0.5"/>

                <ImageView
                    android:contentDescription="@string/weather_icon_wind_direction_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weather_direction"
                    android:layout_weight="0.5"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/wind_speed_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/direction_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                </LinearLayout>

        </LinearLayout>
    </ScrollView>